added the photos, and added the text

--- a/index.html
+++ b/index.html
@@ -47,120 +47,122 @@
         <div class="timeline-wrap">
             <div class="l left">
                 <div class="c">
-                    <img src="https://placehold.co/400x300/059669/FFFFFF?text=Chapter+1:+The+Introduction">
+                    <img src="images/baarish.jpeg">
                 </div>
                 <div class="n">
-                    <h3 class="h4 year">20xx: Chapter One - The Introduction</h3>
-                    <p class="desc mt-2">The unforgettable day we first bonded over that silly inside joke.</p>
+                    <h3 class="h4 year">First Meetup</h3>
+                    <p class="desc mt-2">Crazy to think that our first meetup, we danced in the rain
+                        and in that moment, we instantly clicked</p>
                 </div>
             </div>
 
             <div class="l right">
                 <div class="c">
-                    <img src="https://placehold.co/400x300/10B981/FFFFFF?text=The+First+Big+Adventure">
+                    <img src="images/bday.jpeg">
                 </div>
                 <div class="n">
-                    <h3 class="h4 year">20xx: The First Big Adventure</h3>
-                    <p class="desc mt-2">Remember that place we swore we'd never visit again? We went back the next day.
+                    <h3 class="h4 year">The Birthdayyyy</h3>
+                    <p class="desc mt-2">Your birthday was pretty good, the gift was also good but you deserve better
+                        so here's an upgraded version
                     </p>
                 </div>
             </div>
 
             <div class="l left">
                 <div class="c">
-                    <img src="https://placehold.co/400x300/059669/FFFFFF?text=Late+Night+Study+Sessions">
+                    <img src="images/twin.jpeg">
                 </div>
                 <div class="n">
-                    <h3 class="h4 year">20xx: Surviving The Exams</h3>
-                    <p class="desc mt-2">All-nighters, coffee, and knowing you always had my back. We made it!</p>
+                    <h3 class="h4 year">Matching</h3>
+                    <p class="desc mt-2">We accidentally twinned one day, so here's a photo, bhondu</p>
                 </div>
             </div>
 
             <div class="l right">
                 <div class="c">
-                    <img src="https://placehold.co/400x300/10B981/FFFFFF?text=The+Inside+Joke+Origin">
+                    <img src="images/fav.jpeg">
                 </div>
                 <div class="n">
-                    <h3 class="h4 year">20xx: The Inside Joke Origin</h3>
-                    <p class="desc mt-2">The moment that silly word/phrase became a cornerstone of our friendship
-                        language.</p>
+                    <h3 class="h4 year">Fav photo</h3>
+                    <p class="desc mt-2">Everyone has their favourite photo of their best friend 
+                        here's mine</p>
                 </div>
             </div>
 
             <div class="l left">
                 <div class="c">
-                    <img src="https://placehold.co/400x300/059669/FFFFFF?text=First+Time+We+Cried+Laughing">
+                    <img src="images/autistic.jpeg">
                 </div>
                 <div class="n">
-                    <h3 class="h4 year">20xx: The Epic Road Trip</h3>
-                    <p class="desc mt-2">The trip where we almost got lost but found a lifetime of memories instead.
-                        Crying-laughing guaranteed.</p>
+                    <h3 class="h4 year">Autistic</h3>
+                    <p class="desc mt-2">You're such a bhondu sometimes 
+                        and that's exactly why you're my bestfriend
+                    (merse zyada autistic ho tum)</p>
                 </div>
             </div>
 
             <div class="l right">
                 <div class="c">
-                    <img src="https://placehold.co/400x300/10B981/FFFFFF?text=Movie+Night+Marathon">
+                    <img src="images/collage1.jpeg">
                 </div>
                 <div class="n">
-                    <h3 class="h4 year">20xx: The Movie Marathon Record</h3>
-                    <p class="desc mt-2">The night we attempted to watch all the classics and crashed out by 3 AM. A
-                        victory nonetheless.</p>
+                    <h3 class="h4 year">Collllaaagggeeeee</h3>
+                    <p class="desc mt-2">That one time I got so bored, I made a collage of all our photos</p>
                 </div>
             </div>
 
             <div class="l left">
                 <div class="c">
-                    <img src="https://placehold.co/400x300/059669/FFFFFF?text=The+Best+Advice+Given">
+                    <img src="images/allnighter.jpeg">
                 </div>
                 <div class="n">
-                    <h3 class="h4 year">20xx: The Life-Changing Advice</h3>
-                    <p class="desc mt-2">A small conversation that felt like a major turning point, only possible with a
-                        best friend.</p>
+                    <h3 class="h4 year">The Allnighter</h3>
+                    <p class="desc mt-2">Your first allnighter with me 
+                        we weren't even together, but somehow kept sending each other photo updates the whole time.</p>
                 </div>
             </div>
 
             <div class="l right">
                 <div class="c">
-                    <img src="https://placehold.co/400x300/10B981/FFFFFF?text=That+Time+We+Baked">
+                    <img src="images/hate.jpeg">
                 </div>
                 <div class="n">
-                    <h3 class="h4 year">20xx: The Culinary Disaster (and Win)</h3>
-                    <p class="desc mt-2">That time we tried to bake/cook something complicated. It looked rough, but
-                        tasted amazing.</p>
+                    <h3 class="h4 year">Bestfriends?</h3>
+                    <p class="desc mt-2">I tolerate you through your ragebaiting, your bullying, and even your flirty jokes.
+see how much i suffer?</p>
                 </div>
             </div>
 
             <div class="l left">
                 <div class="c">
-                    <img src="https://placehold.co/400x300/059669/FFFFFF?text=The+Impulse+Buy+Event">
+                    <img src="images/bhondu.jpeg">
                 </div>
                 <div class="n">
-                    <h3 class="h4 year">20xx: The Impulse Buy</h3>
-                    <p class="desc mt-2">The item we bought on a whim that became our favorite piece of shared history.
+                    <h3 class="h4 year">Bhondu dogisss</h3>
+                    <p class="desc mt-2"> i guess we both are autistic bhondu dogis
                     </p>
                 </div>
             </div>
 
             <div class="l right">
                 <div class="c">
-                    <img src="https://placehold.co/400x300/10B981/FFFFFF?text=Last+Birthday+Celebration">
+                    <img src="images/drunk.jpeg">
                 </div>
                 <div class="n">
-                    <h3 class="h4 year">20xx: Last Birthday Bash</h3>
-                    <p class="desc mt-2">Though the website was missing, the party was legendary! Preparing for the next
-                        one...</p>
+                    <h3 class="h4 year">The drunk call</h3>
+                    <p class="desc mt-2">How could I ever forget that drunk call? Easily the funniest call I've ever had with you
+                        (i love you as a friendddd)
+                    </p>
                 </div>
             </div>
 
             <div class="l left">
                 <div class="c">
-                    <img src="https://placehold.co/400x300/059669/FFFFFF?text=Today+and+Beyond">
+                    <img src="images/friend.jpeg">
                 </div>
                 <div class="n">
-                    <h3 class="h4 year">2025: And Beyond!</h3>
-                    <p class="desc mt-2">The chapter we're writing right now. Every day with you is the best part of the
-                        timeline.</p>
+                    <h3 class="h4 year">Bestfriends.</h3>
+                    <p class="desc mt-2">We made it through the shipping, through all the chaos, misunderstandings, through literally everything life threw at us. And after all of it, I can proudly say that you're my best friend.</p>
                 </div>
             </div>
 
@@ -175,28 +177,24 @@
         <div class="max-w-4xl mx-auto text-center">
             <h2 class="h3 mb-6 centered-text" style="color:var(--accent);">⚠️ The August 20th Incident ⚠️</h2>
             <p class="h4 mb-10 max-w-3xl mx-auto incident-p centered-text">
-                <strong class="font-bold">Riddhi, we heard you!</strong> The oversight has been corrected, and we are
-                now formally presenting the case for why you deserve a whole website, regardless of the date.
+                <strong class="font-bold">Riddhi,</strong> I know I messed up the date. I fixed the mistake, and here is why you still deserve a whole website, even if it's late
             </p>
 
             <div class="reason-grid">
                 <div class="r">
                     <p class="r-icon" style="color:var(--accent);">⭐</p>
                     <h3 class="h4 bold mb-2">Primary Reason: She's Riddhi!</h3>
-                    <p class="r-p">A best friend's website is not a gift, it's a mandatory annual public declaration of
-                        awesomeness. It was merely delayed.</p>
+                    <p class="r-p">A best friend's website isn't a special gift, it's something I have to make to show how awesome you are. This one was just a little late</p>
                 </div>
                 <div class="r">
                     <p class="r-icon" style="color:var(--accent);">😂</p>
                     <h3 class="h4 bold mb-2">The Official Complaint (Jokingly)</h3>
-                    <p class="r-p">You provided the best motivation! A joking challenge from Riddhi is a serious command
-                        in our circle of friendship.</p>
+                    <p class="r-p">You motivated me. When you joke about something, I take it seriously</p>
                 </div>
                 <div class="r">
                     <p class="r-icon" style="color:var(--accent);">💯</p>
                     <h3 class="h4 bold mb-2">The Friendship Tax</h3>
-                    <p class="r-p">She always pays the "friendship tax" (i.e., being there for us). A website is a small
-                        interest payment on that lifetime bond.</p>
+                    <p class="r-p">You were always there with me whenever I wanted something chatpata.</p>
                 </div>
             </div>
         </div>
@@ -229,7 +227,7 @@
     </section>
 
     <footer class="footer">
-        <p>&copy; Built belatedly, in emerald green, by your friend.</p>
+        <p>&copy; Made with ❤️ in emerald green, by your friend Saksham</p>
     </footer>
 
     <script src="script.js"></script>
