--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                 </div>
                 <div class="n">
                     <h3 class="h4 year">Fav photo</h3>
-                    <p class="desc mt-2">Everyone has their favourite photo of their best friend 
+                    <p class="desc mt-2">Everyone has their favourite photo of their best friend
                         here's mine</p>
                 </div>
             </div>
@@ -95,9 +95,9 @@
                 </div>
                 <div class="n">
                     <h3 class="h4 year">Autistic</h3>
-                    <p class="desc mt-2">You're such a bhondu sometimes 
+                    <p class="desc mt-2">You're such a bhondu sometimes
                         and that's exactly why you're my bestfriend
-                    (merse zyada autistic ho tum)</p>
+                        (merse zyada autistic ho tum)</p>
                 </div>
             </div>
 
@@ -117,7 +117,7 @@
                 </div>
                 <div class="n">
                     <h3 class="h4 year">The Allnighter</h3>
-                    <p class="desc mt-2">Your first allnighter with me 
+                    <p class="desc mt-2">Your first allnighter with me
                         we weren't even together, but somehow kept sending each other photo updates the whole time.</p>
                 </div>
             </div>
@@ -128,8 +128,9 @@
                 </div>
                 <div class="n">
                     <h3 class="h4 year">Bestfriends?</h3>
-                    <p class="desc mt-2">I tolerate you through your ragebaiting, your bullying, and even your flirty jokes.
-see how much i suffer?</p>
+                    <p class="desc mt-2">I tolerate you through your ragebaiting, your bullying, and even your flirty
+                        jokes.
+                        see how much i suffer?</p>
                 </div>
             </div>
 
@@ -150,7 +151,8 @@ see how much i suffer?</p>
                 </div>
                 <div class="n">
                     <h3 class="h4 year">The drunk call</h3>
-                    <p class="desc mt-2">How could I ever forget that drunk call? Easily the funniest call I've ever had with you
+                    <p class="desc mt-2">How could I ever forget that drunk call? Easily the funniest call I've ever had
+                        with you
                         (i love you as a friendddd)
                     </p>
                 </div>
@@ -162,7 +164,9 @@ see how much i suffer?</p>
                 </div>
                 <div class="n">
                     <h3 class="h4 year">Bestfriends.</h3>
-                    <p class="desc mt-2">We made it through the shipping, through all the chaos, misunderstandings, through literally everything life threw at us. And after all of it, I can proudly say that you're my best friend.</p>
+                    <p class="desc mt-2">We made it through the shipping, through all the chaos, misunderstandings,
+                        through literally everything life threw at us. And after all of it, I can proudly say that
+                        you're my best friend.</p>
                 </div>
             </div>
 
@@ -177,14 +181,16 @@ see how much i suffer?</p>
         <div class="max-w-4xl mx-auto text-center">
             <h2 class="h3 mb-6 centered-text" style="color:var(--accent);">⚠️ The August 20th Incident ⚠️</h2>
             <p class="h4 mb-10 max-w-3xl mx-auto incident-p centered-text">
-                <strong class="font-bold">Riddhi,</strong> I know I messed up the date. I fixed the mistake, and here is why you still deserve a whole website, even if it's late
+                <strong class="font-bold">Riddhi,</strong> I know I messed up the date. I fixed the mistake, and here is
+                why you still deserve a whole website, even if it's late
             </p>
 
             <div class="reason-grid">
                 <div class="r">
                     <p class="r-icon" style="color:var(--accent);">⭐</p>
                     <h3 class="h4 bold mb-2">Primary Reason: She's Riddhi!</h3>
-                    <p class="r-p">A best friend's website isn't a special gift, it's something I have to make to show how awesome you are. This one was just a little late</p>
+                    <p class="r-p">A best friend's website isn't a special gift, it's something I have to make to show
+                        how awesome you are. This one was just a little late</p>
                 </div>
                 <div class="r">
                     <p class="r-icon" style="color:var(--accent);">😂</p>
