--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
     </section>
 
     <footer class="footer">
-        <p>&copy; Made with ❤️ in emerald green, by your friend Saksham</p>
+        <p>&copy; Made with ❤️ in emerald green, by your Bestfriend Saksham</p>
     </footer>
 
     <script src="script.js"></script>
