added a new scrapbook

--- a/index.html
+++ b/index.html
@@ -160,6 +160,16 @@
 
             <div class="l left">
                 <div class="c">
+                    <img src="images/ghar.jpeg" alt="Ghar">
+                </div>
+                <div class="n">
+                    <h3 class="h4 year">Ghar.</h3>
+                    <p class="desc mt-2">She is my home and always will be.</p>
+                </div>
+            </div>
+
+            <div class="l left">
+                <div class="c">
                     <img src="images/friend.jpeg">
                 </div>
                 <div class="n">
