--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                 </div>
             </div>
 
-            <div class="l left">
+            <div class="l right">
                 <div class="c">
                     <img src="images/friend.jpeg">
                 </div>
