added a counter = (since we became friends)

--- a/index.html
+++ b/index.html
@@ -186,6 +186,34 @@
         <div class="max-w-4xl mx-auto text-center">
             <h2 class="h3 light mb-8 centered-text">Countdown to the Exact Moment:</h2>
             <p class="h1 mb-10 centered-text" style="color:var(--accent)">The Next August 20th at 4:18 PM!</p>
+
+            <div class="friends-since" id="friendsSince" data-start-year="">
+                <h3 class="h4 centered-text" style="margin-bottom:1rem;color:var(--text)">Time since we became friends
+                    (9th August)</h3>
+                <div class="w fs-w">
+                    <div class="time-block fs-block">
+                        <span id="fs-years" class="time-num">00</span>
+                        <p class="time-label">Years</p>
+                    </div>
+                    <div class="time-block fs-block">
+                        <span id="fs-days" class="time-num">00</span>
+                        <p class="time-label">Days</p>
+                    </div>
+                    <div class="time-block fs-block">
+                        <span id="fs-hours" class="time-num">00</span>
+                        <p class="time-label">Hours</p>
+                    </div>
+                    <div class="time-block fs-block">
+                        <span id="fs-minutes" class="time-num">00</span>
+                        <p class="time-label">Minutes</p>
+                    </div>
+                    <div class="time-block fs-block">
+                        <span id="fs-seconds" class="time-num">00</span>
+                        <p class="time-label">Seconds</p>
+                    </div>
+                </div>
+            </div>
+
             <div class="w">
                 <div class="time-block">
                     <span id="days" class="time-num">00</span>
