added a new section

--- a/index.html
+++ b/index.html
@@ -182,11 +182,9 @@
         </div>
     </section>
 
-    <section id="s-4" class="s-pad countdown-s">
+    <section id="s-4" class="s-pad">
         <div class="max-w-4xl mx-auto text-center">
-            <h2 class="h3 light mb-8 centered-text">Countdown to the Exact Moment:</h2>
-            <p class="h1 mb-10 centered-text" style="color:var(--accent)">The Next August 20th at 4:18 PM!</p>
-
+            <h2 class="h3 mb-6 centered-text" style="color:var(--accent)">💚 Time Since We Became Friends</h2>
             <div class="friends-since" id="friendsSince" data-start-year="">
                 <h3 class="h4 centered-text" style="margin-bottom:1rem;color:var(--text)">Time since we became friends
                     (9th August)</h3>
@@ -213,7 +211,13 @@
                     </div>
                 </div>
             </div>
+        </div>
+    </section>
 
+    <section id="s-5" class="s-pad countdown-s">
+        <div class="max-w-4xl mx-auto text-center">
+            <h2 class="h3 light mb-8 centered-text">Countdown to the Exact Moment:</h2>
+            <p class="h1 mb-10 centered-text" style="color:var(--accent)">The Next August 20th at 4:18 PM!</p>
             <div class="w">
                 <div class="time-block">
                     <span id="days" class="time-num">00</span>
