--- a/index.html
+++ b/index.html
@@ -137,7 +137,8 @@
                 <div class="c"><img src="images/ghar.jpeg" alt="Ghar"></div>
                 <div class="n">
                     <h3 class="h4 year">Ghar.</h3>
-                    <p class="desc mt-2">She is my home and always will be.</p>
+                    <p class="desc mt-2">she really thought that I would leave her, not knowing she’s the one person I’d always stay for.
+                        (She is my home and always will be.)</p>
                 </div>
             </div>
             <div class="l right">
