--- a/index.html
+++ b/index.html
@@ -17,25 +17,7 @@
     <div id="leafCounter" class="leaf-counter" tabindex="0" aria-label="Leaf counter" aria-live="polite">
         <button id="leafDec" class="leaf-btn" aria-label="Decrease leaves" type="button">−</button>
         <div class="leaf-display" role="group" aria-label="Leaf count">
-            <svg id="leafLogo" width="28" height="28" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"
-                focusable="false" aria-hidden="true">
-                <defs>
-                    <linearGradient id="leafG" x1="0" x2="1" y1="0" y2="1">
-                        <stop offset="0%" stop-color="#34d399" />
-                        <stop offset="60%" stop-color="#10b981" />
-                        <stop offset="100%" stop-color="#059669" />
-                    </linearGradient>
-                    <filter id="leafShadow" x="-50%" y="-50%" width="200%" height="200%">
-                        <feDropShadow dx="0" dy="2" stdDeviation="4" flood-color="#064e3b" flood-opacity="0.12" />
-                    </filter>
-                </defs>
-                <path
-                    d="M12 2c3.9 3.9 6.1 7.8 7.1 11.6.6 2.2.9 4.5 1 6.5-3.5 0-7.4-1.8-11.6-5.9C6.1 14.2 4.4 10.3 4.4 6.8 4.3 8.8 4.7 11.1 5.2 13.3 8.6 9.9 11 7.6 12 5.6V2z"
-                    fill="url(#leafG)" filter="url(#leafShadow)" />
-                <path
-                    d="M7.8 16.2c.8.4 1.7.6 2.7.6 1.6 0 3.3-.6 5.2-1.8 1.8-1.1 3.8-2.9 5.9-5h.1c-3.9 0-7.8 1.8-11.6 5.6-3.8 3.8-5.6 7.7-5.6 11.6-2.1-2.1-3.9-4.1-5-5.9-1.1-1.9-1.8-3.6-1.8-5.2 0-1 .2-1.9.6-2.7 1.4-.8 3.8-1.9 7.5-3.3z"
-                    opacity="0.06" fill="#000" />
-            </svg>
+            <span id="leafLogo">&#x1f341;</span>
             <span id="leafCount" class="leaf-count">0</span>
         </div>
         <button id="leafInc" class="leaf-btn" aria-label="Increase leaves" type="button">+</button>
@@ -130,7 +112,7 @@
                 <div class="n">
                     <h3 class="h4 year">The drunk call</h3>
                     <p class="desc mt-2">How could I ever forget that drunk call? Easily the funniest call I've ever had
-                        with you (i love you as a friendddd)</p>
+                        with you (i love you as a frienddd)</p>
                 </div>
             </div>
             <div class="l left">
