added new features

--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
 </head>
 
 <body>
+    <div id="scrollProgress"></div>
+    <div id="particles"></div>
+
+    <div class="badge-container" id="badgeContainer"></div>
+
     <button id="themeToggle" class="t" aria-label="Toggle theme" title="Toggle theme">
         <span class="dot" id="themeIcon"></span>
         <span id="themeLabel" class="label" style="color:var(--text)">Dark</span>
@@ -119,7 +124,8 @@
                 <div class="c"><img src="images/ghar.jpeg" alt="Ghar"></div>
                 <div class="n">
                     <h3 class="h4 year">Ghar.</h3>
-                    <p class="desc mt-2">she really thought that I would leave her, not knowing she’s the one person I’d always stay for.
+                    <p class="desc mt-2">she really thought that I would leave her, not knowing she's the one person I'd
+                        always stay for.
                         (She is my home and always will be.)</p>
                 </div>
             </div>
