--- a/index.html
+++ b/index.html
@@ -228,6 +228,17 @@
         </div>
     </section>
 
+    <section id="s-6" class="s-pad badges-section">
+        <div class="max-w-5xl mx-auto text-center">
+            <h2 class="h3 mb-6 centered-text" style="color:var(--accent)">🏆 Badges Unlocked</h2>
+            <p class="h4 mb-10 max-w-3xl mx-auto centered-text" style="color:var(--muted)">Collect 25 leaves at a time
+                to unlock special badges with heartfelt messages!</p>
+
+            <div id="badgesDisplay" class="badges-display">
+            </div>
+        </div>
+    </section>
+
     <footer class="footer">
         <p>&copy; Made with ❤️ in emerald green, by your Bestfriend Saksham</p>
     </footer>
