fixed some bigs

--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
         <div class="max-w-4xl mx-auto text-center">
             <h2 class="h3 mb-6 centered-text" style="color:var(--accent)">🌟 Why You Deserve This Website 🌟</h2>
             <p class="h4 mb-10 max-w-3xl mx-auto incident-p centered-text"><strong class="font-bold">Riddhi,</strong> I
-                know I messed up the date. But here are the **real reasons** why you need this corner of the internet:</p>
+                know I messed up the date. But here are the real reasons why you deserve this corner of the internet:</p>
             <div class="reason-grid">
                 
                 <div class="r">
